// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tr /> should render component 1`] = `
<DocumentFragment>
  .c0 > *:nth-child(n+0) {
  background: #fff;
  border-color: #E9ECEF;
  color: #323a46;
}

.c0:hover > *:nth-child(n+0) {
  background: #F2F4F7;
}

<table>
    <tbody>
      <tr
        class=" c0"
      />
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`<Tr /> should render component with soft colors 1`] = `
<DocumentFragment>
  .c0 > *:nth-child(n+0) {
  background: undefined;
  border-color: #fcfdfd;
  color: #959697;
}

.c0:hover > *:nth-child(n+0) {
  background: #fcfdfd;
}

<table>
    <tbody>
      <tr
        class=" c0"
      />
    </tbody>
  </table>
</DocumentFragment>
`;
